# mosaic_proposal_helper

./: .gitignore  LICENSE  README.md  example_poiting.py  iram_pointings.txt  mosaic.py  mosaic_plotting.py  pyproject.toml
.github/workflows/: ci.yaml  python-publish.yml  ruff.yml
examples/: example_pointing.py
examples/data/: B1main_NH3_11_TdV.fits
src/mosaic_proposal_helper/: __init__.py  core.py  plotting.py
src/test/: conftest.py  test_core.py  test_plotting.py
