[build-system]
requires = ["setuptools >= 64", "setuptools-scm >= 8"]
build-backend = "setuptools.build_meta"

[project]
name = "mosaic_proposal_helper"
version = "0.1"
description = "Helpers to generate and visualize mosaic pointings for interferometers"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Jaime Pineda" }]
dependencies = ["numpy", "astropy", "matplotlib"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
